--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+Version 1.3.1:
+  Major features:
+    * Removed obsolete crossplatform OSDPretty notifications
+
+
+
 Version 1.3:
   Major features:
     * Vk.com support
