--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+Version 1.3.2:
+  Major features:
+    * Fixed a major bug with wrong order of playing after a shuffle
+
+
+
 Version 1.3.1:
   Major features:
     * Removed obsolete crossplatform OSDPretty notifications
