--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,11 @@
+Version 1.3.3:
+  Major features:
+    * Added likes feature for the SoundCloud service'
+  Other features:
+    * Fixed bug with the global search in the SoundCloud
+
+
+
 Version 1.3.2:
   Major features:
     * Fixed a major bug with wrong order of playing after a shuffle
